put in place a test showing dates management